greencharge/enact-sdk-generated/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greencharge
  namespace: enact
  labels:
    app.kubernetes.io/name: greencharge
    app.kubernetes.io/instance: greencharge
    app.kubernetes.io/version: 1.5
    app.kubernetes.io/component: service
    app.kubernetes.io/managed-by: enact-apm
    app: greencharge
    app.kubernetes.io/part-of: greencharge-autopilot
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app.kubernetes.io/name: greencharge
      app.kubernetes.io/instance: greencharge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: greencharge
        app.kubernetes.io/instance: greencharge
        app.kubernetes.io/version: 1.5
        app.kubernetes.io/component: service
        app.kubernetes.io/managed-by: enact-apm
        app: greencharge
        app.kubernetes.io/part-of: greencharge-autopilot
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: greencharge
        image: greencharge:1.5
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1
            memory: 2Gi
        readinessProbe:
          httpGet:
            path: /chargers
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /chargers
            port: 8080
          initialDelaySeconds: 150
          periodSeconds: 10
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
